Added controller and service unit tests and Sonar fixes